[MS-249] changed m to p to prevent margin collapse

--- a/src/sass/section.scss
+++ b/src/sass/section.scss
@@ -64,13 +64,13 @@
 .ms-s-offset {
  @extend .container-xxl;
 
-  margin-left: 10%;
-  margin-right: 10%;
+  padding-left: 10%;
+  padding-right: 10%;
   margin-bottom: 2.5rem;
 
   @media only screen and (max-width: ($ms-screen-sm - 1)) {
-    margin-left: 5%;
-    margin-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     margin-top: 0.5rem;
     margin-bottom: 2rem;
   }
