--- a/src/sass/vitamin.scss
+++ b/src/sass/vitamin.scss
@@ -221,8 +221,8 @@
   @media only screen and (max-width: ($ms-screen-sm - 1)) {
     .vitamins-list {
       section {
-        margin-left: 0;
-        margin-right: 0;
+        padding-left: 0;
+        padding-right: 0;
       }
   
       .vit-item {
